fix for alignment with context searchfields

--- a/src/components/searchfield/_searchfield.scss
+++ b/src/components/searchfield/_searchfield.scss
@@ -94,6 +94,10 @@
     white-space: nowrap;
     width: 100%;
 
+    > button.close {
+        top: 5px;
+    }
+
     > .searchfield {
       background-color: $searchfield-context-bg;
       border-bottom: 1px solid $searchfield-context-border-color;
